Update project reference

--- a/ncmsharp_cli/ncmsharp_cli.csproj
+++ b/ncmsharp_cli/ncmsharp_cli.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ncmdump_lib\ncmdump_lib.csproj" />
+  </ItemGroup>
+
 </Project>
